# codex-telegram

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE.md  pyproject.toml
deploy/systemd/: codex-telegram.service  hermes-telegram.service
scripts/: install-github.sh  install.sh  telegram-e2e-preflight.py
src/codex_telegram/: __init__.py  cli.py  codex_runner.py  config.py  e2e_harness.py  gateway.py  model_catalog.py  session_store.py  telegram_api.py  telegram_format.py
src/hermes_telegram/: __init__.py  cli.py  codex_runner.py  config.py  gateway.py  model_catalog.py  session_store.py  telegram_api.py
tests/: test_codex_runner.py  test_config.py  test_e2e_harness.py  test_gateway.py  test_model_catalog.py  test_session_store.py  test_telegram_api.py  test_telegram_format.py  test_version.py
