[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-telegram"
version = "0.2.0"
description = "Standalone Telegram bridge for driving Codex from a bot chat."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Local" }]
dependencies = []

[project.scripts]
codex-telegram = "codex_telegram.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
